[project]
name = "local-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.4",
    "transformers>=5.4.0",
    "uuid6>=2025.0.1",
    "torch",           # no version pin yet
    "torchvision",
    "torchaudio",
    "langchain>=1.2.14",
]

# === PyTorch CUDA configuration for uv ===
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
